force-app/main/default/objects/FEC_Do_Not_Bother__c/FEC_Do_Not_Bother__c.object-meta.xml
<CustomObject>
    <label>Do Not Bother</label>
    <nameField>
        <label>Do Not Bother Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Do Not Bother</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>