force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action</label>
    <type>Checkbox</type>
</CustomField>