force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_DNB_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_DNB_Channel__c</fullName>
    <label>DNB Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>