force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_National_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_ID__c</fullName>
    <label>National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>