force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Original_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Reason__c</fullName>
    <description>Thông tin lí do khách hàng thực hiện DNB</description>
    <label>Original Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>