force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Phone_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Email__c</fullName>
    <label>Phone/Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>