force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Status__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>