force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Remarks__c</fullName>
    <label>Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>