force-app/main/default/objects/FEC_Do_Not_Bother__c/fields/FEC_Updated_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Updated_Reason__c</fullName>
    <label>Updated Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_DNB_Reason</valueSetName>
    </valueSet>
</CustomField>